<resources>
    <string name="app_name">Watch Volume</string>
    <string name="title">Sterowanie głośnością</string>
    <string name="mode_accessibility">Tryb: Dostępność</string>
    <string name="mode_media">Tryb: Multimedia</string>
    <string name="toggle_to_media">Przełącz na Multimedia</string>
    <string name="toggle_to_accessibility">Przełącz na Dostępność</string>
    <string name="vol_up">Głośniej</string>
    <string name="vol_down">Ciszej</string>
    <string name="volume_status">Głośność: %1$d / %2$d</string>
    <string name="hint">Pokrętło, przyciski lub ekran: zmiana głośności</string>
    <string name="assign_title">Przypisania przycisków</string>
    <string name="assign_up">Przypisz głośniej</string>
    <string name="assign_down">Przypisz ciszej</string>
    <string name="assign_toggle">Przypisz przełącz tryb</string>
    <string name="assign_reset">Resetuj przypisania</string>
    <string name="assign_ready">Naciśnij przycisk, aby ustawić przypisanie.</string>
    <string name="assign_listen">Naciśnij przycisk teraz...</string>
    <string name="label_up">Głośniej: %1$s</string>
    <string name="label_down">Ciszej: %1$s</string>
    <string name="label_toggle">Przełącz tryb: %1$s</string>
    <string name="key_unassigned">brak</string>
    <string name="profile_title">Profil</string>
    <string name="profile_default">Domyślny</string>
    <string name="profile_jieshuo">Jieshuo</string>
    <string name="profile_switch">Zmień profil</string>
</resources>
